; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csblob_get_hashtype.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csblob_get_hashtype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs_blob = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @csblob_get_hashtype(%struct.cs_blob* %0) #0 {
  %2 = alloca %struct.cs_blob*, align 8
  store %struct.cs_blob* %0, %struct.cs_blob** %2, align 8
  %3 = load %struct.cs_blob*, %struct.cs_blob** %2, align 8
  %4 = getelementptr inbounds %struct.cs_blob, %struct.cs_blob* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.cs_blob*, %struct.cs_blob** %2, align 8
  %9 = getelementptr inbounds %struct.cs_blob, %struct.cs_blob* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @cs_hash_type(i32* %10)
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %7
  %14 = phi i32 [ %11, %7 ], [ 0, %12 ]
  ret i32 %14
}

declare dso_local i32 @cs_hash_type(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
